--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     // 합쳐진 라이브러리의 정의 파일을 특정해주는 역할
     "lib": ["ES6", "DOM"],
     "strict": true,
-    "allowJs": true
+    "esModuleInterop": true,
+    "module": "CommonJS"
   }
 }
